# raytracer

./: CMakeLists.txt  README.md
assets/scenes/: mesh_scene.json
include/: cu_matrix.h  cu_vector.h  matrix.cuh  matrix.h  mesh.h  projection_helpers.cuh  scene_objects.cuh  vector.cuh  vector.h
lab_1/: CMakeLists.txt  README.md  scene.json
lab_1/assets/scenes/: default.json  mesh_scene.json  scene.json  simple.json
lab_1/include/: matrix.cuh  projection_helpers.cuh  scene.cuh  scene_objects.cuh  vector.cuh
lab_1/include/cuda/: matrix.cuh  projection_helpers.cuh  scene.cuh  scene_objects.cuh  vector.cuh
lab_1/src/: main.cu  raytrace.cu  scene.cu  scene_objects.cu
lab_1/src/cuda/: raytrace.cu  scene.cu
lab_1/test/: integrate.cu
src/: main.cpp  main.cu  raytrace.cu  write_image.cpp
